--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
  body {
-    background-image: url(2.jpg);
+    background-image: url(pattern.jpg);
     background-repeat: no-repeat;
-    background-size: cover;
-    background-color: rgba(4, 80, 80, 0.849);  
+    background-size: cover; 
     background-blend-mode: lighten;
-} 
+}
 /*@keyframes blink {
     0%{
         background: rebeccapurple;
@@ -47,18 +46,22 @@ html {
 header {
     width: 100%;
     height: 80px;
-    background: rgba(0, 0, 0, 0.404);
+    background: rgb(0, 0, 0);
     display: flex;
     align-content: center;
     justify-content: space-between;
-    padding: 15px 100px;
+    padding: 15px 50px;
 }
 .logo {
+    display: flex;
     font-size: 28px;
     font-weight: bold;
-    color: aliceblue;
+    color: rgb(248, 171, 4);
+    padding-top: 5px;
 }
 .hamburger {
+    padding-top: 10px;
+    padding-left: 10px;
     display: none;
 }
 .nav-bar ul {
@@ -66,7 +69,7 @@ header {
 }
 .nav-bar ul li a {
     display: block;
-    color: aliceblue;
+    color: rgb(248, 171, 4);
     font-size: 20px;
     padding: 10px 25px;
     border-radius: 50px;
@@ -79,12 +82,12 @@ header {
 }
 @media only screen and (max-width: 1320px){
     header {
-        padding: 0 50px;
+        padding: 10px 50px;
     }
 }
 @media only screen and (max-width: 1100px){
     header {
-        padding: 0 30px;
+        padding: 15px 30px;
     }
 }
 @media only screen and (max-width: 900px){
@@ -95,7 +98,7 @@ header {
     .hamburger .line {
         height: 3px;
         width: 30px;
-        background: aliceblue;
+        background: rgb(248, 171, 4);
         margin: 6px 0;
     }
     .nav-bar {
@@ -115,7 +118,7 @@ header {
     .nav-bar ul {
         display: block;
         width: fit-content;
-        margin: 80px auto 0 auto;
+        margin: 50px auto 0 auto;
         text-align: center; 
         transition: 0.5s;   
         opacity: 0;    
